# LangRecognition2Translate

./: .gitignore  README.md  check_device.py  config.toml  loguru.json  loguru.toml  loguru.yaml  main.py  pyproject.toml  translater.py
src/core/: recognition_callback.py
src/utils/: check_device.py  config.py  constants.py
tests/: test_config.py  test_constant.py
